deployment/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: xend-api-svc
spec:
  replicas: 3
  template:
    metadata:
      labels:
        run: xend-api-svc
    spec:
      containers:
        - name: xend-api-svc
          image: gcr.io/ms-clients-2018/xend-api-svc:1.3.1
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /
              port: "3000"
            initialDelaySeconds: 10
            timeoutSeconds: 3
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: "3000"
            initialDelaySeconds: 10
            timeoutSeconds: 3
            periodSeconds: 5
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 512Mi
              cpu: 200m
