deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xend-api-svc
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    run: xend-api-svc
