deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: xend-api-svc
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
      - xend-api.microsmart.tk
    secretName: wildcard-certificate-tls
  rules:
  - host: xend-api.microsmart.tk
    http:
      paths:
      - backend:
          serviceName: xend-api-svc
          servicePort: 80
